# joramila

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
alkaram/: database.py  embeddings.py  image_processing.py  models.py  remove_background.swift  scraper.py  webui.py
