[project]
name = "joramila"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"beautifulsoup4>=4.12.0",
	"curl-cffi>=0.11.0",
	"fastapi>=0.115.0",
	"open-clip-torch>=3.3.0",
	"pillow>=11.0.0",
	"python-multipart>=0.0.20",
	"sqlite-vec>=0.1.9",
	"uvicorn>=0.34.0",
]
